--- a/Billing-app/index.html
+++ b/Billing-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distributor Billing App</title>
-    <meta http-equiv="refresh" content="0; url=Frontend/dashboard.html">
+    <meta http-equiv="refresh" content="0; url=Frontend/login.html">
     <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
